# rusket

./: .gitignore  404.html  AGENTS.md  Cargo.toml  Cargo.toml.test  LICENSE  README.md  benchmark.py  benchmark_output.txt  benchmarks.mdx  cliff.toml  cookbook.ipynb  cookbook.mdx  cookbook.py  debug_item_knn.py  index.html  index.mdx  llm.txt  migration.mdx  mkdocs.yml  optimized_als.txt  patch_mlflow.py  patch_rename_model.py  polars.mdx  profile_bm25.py  profile_ease.py  pyarrow_snippet.py  pyproject.toml  pyright_output.txt  pyrightconfig.json  recbole_test_model_auto.py  recbole_tests.json  recommender.mdx  schema.json  search.json  search_results.txt  sitemap.xml  spark.mdx  test_colnames.py  test_faer  (+7 more)
.agents/: config.md
.agents/workflows/: convert_notebooks_docs.md  optimize_loop.md  push_to_main.md  release_tag.md  sync_docs.md
.cargo/: config.toml
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260312_194840.json  holistic_packet_20260312_194859.json  holistic_packet_20260312_201439.json  holistic_packet_20260312_203510.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  regression.yml
1b-challenge/: index.html
api-reference/: index.html
architecture/: index.html
assets/: als_benchmark.html  als_benchmark.json  als_sweep.html  benchmark_report.html  scale_benchmark.html  scale_benchmark.json
benches/: bench_als.rs  eclat_bench.rs
benchmarks/: baseline_als.json  bench_1billion.py  bench_als.py  bench_als_cholesky.rs  bench_als_sweep.py  bench_anderson.py  bench_andi2.py  bench_fpgrowth_vs_armrs.py  bench_fpminer_realistic.py  bench_fpminer_vs_fpgrowth.py  bench_lightgcn.py  bench_mining_algos.py  bench_prefixspan.py  bench_pytest_librecommender.py  bench_realworld.py  bench_rusket_absolute.py  bench_scale.py  bench_vs_librecommender.py  bench_vs_mlxtend.py  bench_vs_recbole.py  benchmark_fpm.py  benchmark_pyspark.py  benchmark_report.md  benchmark_surprise.py  compare_apriori.py  index.html  plot_fpminer_scale.py
changelog/: index.html
cookbook/: index.html
databricks_cookbook/: index.html
docs/: 1b-challenge.md  1b-challenge.mdx  api-reference.md  architecture.md  architecture.mdx  benchmarks.md  benchmarks.mdx  changelog.md  cookbook.ipynb  cookbook.md  cookbook.mdx  cookbook.py  databricks_cookbook.md  docs.json  gpu.md  index.md  index.mdx  llm.txt  migration.md  mlops.md  pipeline.md  polars.md  quickstart.md  quickstart.mdx  recommender.md  recommender.mdx  schema.json  serving.md  spark.md  streaming.md  streaming.mdx  vectordb.md
docs/assets/: als_benchmark.html  als_benchmark.json  als_sweep.html  extra.css  scale_benchmark.html  scale_benchmark.json
docs/notebooks/: 1_online_retail_basket_analysis.ipynb  1_online_retail_basket_analysis.md  2_movielens_recommendations.ipynb  2_movielens_recommendations.md  3_ecommerce_lifecycle_mining.ipynb  3_ecommerce_lifecycle_mining.md  6_optuna_tuning.md  (+6 more)
examples/: 01_getting_started.py  02_market_basket_faker.py  03_polars_input.py  04_sparse_input.py  05_large_scale.py  06_mlxtend_migration.py  06_recommender_hybrid.py  07_als_pca_visualization.py  08_spark_guide_translation.py  09_online_retail_basket_analysis.py  10_online_retail_hupm_profit.py  11_instacart_recommender.py  12_faker_recommender.py  13_als_performance_eals.py  13_lancedb_serving.py  15_time_aware_sequences.py
gpu/: index.html
migration/: index.html
mlops/: index.html
notebooks/: 1_online_retail_basket_analysis.ipynb  2_movielens_recommendations.ipynb  3_ecommerce_lifecycle_mining.ipynb  4_lightgcn_ecommerce_recommendations.ipynb  5_sasrec_next_best_product.ipynb
pipeline/: index.html
polars/: index.html
quickstart/: index.html
recommender/: index.html
rusket/: __init__.py  _compat.py  _config.py  _core.py  _dependencies.py  _embedding_mixin.py  _fpbase.py  _rusket.pyi  _type_utils.py  _validation.py  als.py  analytics.py  ann.py  association_rules.py  bert4rec.py  bpr.py  content_based.py  cuda.py  ease.py  eclat.py  evaluation.py  export.py  faiss_ann.py  fin.py  fm.py  fpgrowth.py  fpmc.py  fptda.py  gpu.py  grouped.py  hupm.py  hybrid.py  hybrid_embedding.py  incremental_pca.py  item_knn.py  lcm.py  lightgcn.py  mine.py  mlflow.py  model.py  (+23 more)
saved/: BPR-Feb-22-2026_17-48-37.pth  BPR-Feb-22-2026_17-58-17.pth  BPR-Feb-22-2026_17-58-50.pth
scripts/: bench_declat.rs  bench_eals.rs  eval_doc_snippets.py  gen_api_reference.py  gen_llm_txt.py  notebook_source.py  profile_als.rs  profile_apply_a.rs  sync_changelog.py  test_notebook_data.py
search/: search_index.json
serving/: index.html
site/: 404.html  index.html  sitemap.xml
spark/: index.html
src/: als.rs  ann.rs  association_rules.rs  bert4rec.rs  bpr.rs  common.rs  content_based.rs  cross_validate.rs  ease.rs  eclat.rs  fin.rs  fm.rs  fpgrowth.rs  fpmc.rs  fptda.rs  hupm.rs  incremental_pca.rs  item_knn.rs  lcm.rs  lib.rs  lightgcn.rs  metrics.rs  miner.rs  model_selection.rs  negfin.rs  nmf.rs  nn_descent.rs  pacmap.rs  pca.rs  pipeline.rs  prefixspan.rs  rng.rs  sasrec.rs  simd.rs  svd.rs  test.rs  user_knn.rs
streaming/: index.html
tests/: README.md  benchmark_low_support_scenario.py  benchmark_report.html  conftest.py  generate_benchmark_report.py  test_als.py  test_analytics.py  test_ann.py  test_api_consistency.py  test_association_rules.py  test_benchmark.py  test_benchmark_pca.py  test_benchmark_pipeline.py  test_benchmark_sasrec.py  test_bert4rec.py  test_bpr.py  test_content_based.py  test_cross_validate.py  test_cuda_config.py  test_cuda_vectordb.py  test_df_type_consistency.py  test_ease.py  test_eclat.py  test_evaluation.py  test_extreme_scale.py  test_faker_pipeline.py  test_faker_recommender.py  test_faker_sequences.py  test_faker_transactions.py  test_fin.py  test_fluent_api.py  test_fm.py  test_fpbase.py  test_fpgrowth.py  test_fpgrowth_algo.py  test_fpmc.py  test_fptda.py  test_gpu_config.py  test_gpu_vectordb.py  test_hupm.py  (+42 more)
vectordb/: index.html
(+160 files in other folders)
