[package]
name = "rusket"
version = "0.1.14"
edition = "2021"


[lib]
name = "_rusket"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
ahash = "0.8.12"
numpy = "0.28.0"
rayon = "1.11"
smallvec = { version = "1.15", features = ["union"] }
mimalloc = { version = "0.1", default-features = false }
faer = { version = "0.21", default-features = false, features = ["rayon"] }
tempfile = "3.10"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
opt-level = 3

