[package]
name = "rusket"
version = "0.1.23"
edition = "2021"
license = "MIT"


[lib]
name = "_rusket"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
ahash = "0.8.12"
numpy = "0.28.0"
rayon = "1.11"
smallvec = { version = "1.15", features = ["union"] }
mimalloc = { version = "0.1", default-features = false }
tempfile = "3.10"
faer = "0.21.2"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
opt-level = 3

