[package]
name = "rusket"
version = "0.1.47"
edition = "2021"
license = "MIT"
exclude = [
    "benchmarks/**/*",
    "tests/**/*",
    "docs/**/*",
    "benchdata/**/*",
    "data/**/*",
    "saved/**/*",
    "site/**/*",
    "recbole_data/**/*",
    "log_tensorboard/**/*",
    ".github/**/*",
    ".agents/**/*",
    "benches/**/*",
    "scripts/**/*",
    "examples/**/*",
    "uv.lock",
    "recbole_test_model_auto.py",
    "recbole_tests.json",
    "profile_als.dSYM/**/*",
    "llm.txt",
    "zensical.toml",
]


[lib]
name = "_rusket"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
ahash = "0.8.12"
numpy = "0.28.0"
rayon = "1.11"
smallvec = { version = "1.15", features = ["union"] }
mimalloc = { version = "0.1", default-features = false }
tempfile = "3.10"
faer = "0.21.2"
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
opt-level = 3

