[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rusket"
version = "0.1.16"
description = "Blazing-fast FP-Growth and Association Rules — pure Rust via PyO3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "efficient-apriori>=2.0.6",
    "pyarrow>=23.0.1",
    "psutil>=6",
    "tqdm>=4",
]

[project.urls]
Homepage = "https://github.com/bmsuisse/rusket"
Repository = "https://github.com/bmsuisse/rusket.git"

[project.optional-dependencies]
polars = ["polars>=0.20"]
pandas = ["numpy>=1.24", "pandas>=2.0"]
docs = ["mkdocs-material>=9.5", "mkdocs>=1.5,<2"]

[tool.maturin]
python-source = "."
module-name = "rusket._rusket"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.0",
    "mlxtend>=0.23",
    "packaging>=23",
    "scipy>=1.11",
    "pytest-benchmark>=4",
    "polars>=0.20",
    "faker>=40.4.0",
    "plotly>=6.5.2",
    "maturin>=1.12.3",
    "pyright>=1.1.408",
    "pandas>=2.0",
    "numpy>=1.24",
    "jupytext>=1.19.1",
    "jupyter>=1.1.1",
    "mkdocs-jupyter>=0.25.1",
    "pyarrow>=23.0.1",
    "psutil>=6",
    "tqdm>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest-benchmark]
storage = "file://tests/benchmarks"
disable_gc = true
min_rounds = 3
warmup = false

[tool.pyright]
pythonVersion = "3.14"
include = ["rusket"]
venvPath = "."
venv = ".venv"
