[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rusket"
version = "0.1.43"
description = "Ultra-fast Recommender Engines & Market Basket Analysis for Python, written in Rust."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/bmsuisse/rusket"
Repository = "https://github.com/bmsuisse/rusket.git"

[project.optional-dependencies]
polars = ["polars>=0.20"]
pandas = ["numpy>=1.24", "pandas>=2.0"]
docs = ["zensical>=0.0.23"]

[tool.maturin]
python-source = "."
module-name = "rusket._rusket"
features = ["pyo3/extension-module"]
exclude = [
    "benchmarks/**/*",
    "tests/**/*",
    "docs/**/*",
    "benchdata/**/*",
    "data/**/*",
    "saved/**/*",
    "site/**/*",
    "recbole_data/**/*",
    "log_tensorboard/**/*",
    ".github/**/*",
    ".agents/**/*",
    "benches/**/*",
    "scripts/**/*",
    "examples/**/*",
    "uv.lock",
    "recbole_test_model_auto.py",
    "recbole_tests.json",
    "profile_als.dSYM/**/*",
    "llm.txt",
    "zensical.toml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.0",
    "efficient-apriori>=2.0.6",
    "mlxtend>=0.23",
    "packaging>=23",
    "scipy>=1.11",
    "pytest-benchmark>=4",
    "polars>=0.20",
    "faker>=40.4.0",
    "plotly>=6.5.2",
    "maturin>=1.12.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "jupytext>=1.19.1",
    "jupyter>=1.1.1",
    "pyarrow>=23.0.1",
    "psutil>=6",
    "tqdm>=4",
    "pyspark>=4.1.1",
    "ruff>=0.15.2",
    "basedpyright>=1.38.1",
    "zensical>=0.0.23",
    "openpyxl>=3.1.5",
    "prefixspan>=0.5.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest-benchmark]
storage = "file://tests/benchmarks"
disable_gc = true
min_rounds = 3
warmup = false

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["rusket", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "examples/",
    "scripts/",
    "docs/",
    "benchmarks/",
    "recbole_test_model_auto.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "C901", # function is too complex
]
